--- a/Web/bomandyam/html/privacyPolicy.html
+++ b/Web/bomandyam/html/privacyPolicy.html
@@ -75,14 +75,14 @@
                 <p>
                     <p>
                         <div class="privacy_text">개인정보 처리 방침</div>
-                        <spa>1. 개인정보의 처리 목적</span>
+                        <span>1. 개인정보의 처리 목적</span>
                         &lt;얌이를 봄&gt;(‘https://bomandyam.shop’이하 ‘봄이와 얌’) 은(는) 다음의 목적을 위하여 개인정보를 처리하고 있으며, 다음의 목적 이외의 용도로는 이용하지 않습니다.
                     </p>
                     <p> - 고객 가입의사 확인, 고객에 대한 서비스 제공에 따른 본인 식별.인증, 회원자격 유지.관리, 물품 또는 서비스 공급에 따른 금액 결제, 물품 또는 서비스의 공급.배송 등</p>
                     <p>
                         <strong>2. 개인정보의 처리 및 보유 기간</strong>
                     </p>
-                    <p'>
+                    <p>
                         ① &lt;얌이를 봄&gt;(‘https://bomandyam.shop’이하 ‘봄이와 얌’) 은(는) 정보주체로부터 개인정보를 수집할 때 동의 받은 개인정보 보유․이용기간 또는 법령에 따른 개인정보 보유․이용기간 내에서 개인정보를 처리․보유합니다.
                     </p>
                     <p>② 구체적인 개인정보 처리 및 보유 기간은 다음과 같습니다.</p>
@@ -119,7 +119,7 @@
                     </ul>
                     </br>
                     </br>
-                    <p'>
+                    <p>
                         <strong>
                             5. 개인정보의 파기
                             <em>
